fix(loading): small icon is invisible in Chrome 61
see telerik/kendo-theme-default#738

--- a/packages/default/scss/common/_base.scss
+++ b/packages/default/scss/common/_base.scss
@@ -540,7 +540,7 @@
         content: "";
         box-sizing: inherit;
         border-radius: 50%;
-        border-width: .03em;
+        border-width: .05em;
         border-style: solid;
         border-color: currentColor;
         border-top-color: transparent;
